change env file

--- a/client/.env
+++ b/client/.env
@@ -23,7 +23,8 @@
 
 
 # Base API URL
-VITE_BASE_URL=http://localhost:3000/api
+VITE_BASE_URL=https://travellersneed-server.onrender.com/api
+# VITE_BASE_URL=http://localhost:3000/api
 
 # JWT Secret
 VITE_JWT_SECRET=oehworreeorhewroew98123449324324kwnfwwbmtechx
