i made changes booking controller ,blog,tourplan

--- a/client/.env
+++ b/client/.env
@@ -23,8 +23,8 @@
 
 
 # Base API URL
-VITE_BASE_URL=https://travellersneed-server.onrender.com/api
-# VITE_BASE_URL=http://localhost:3000/api
+# VITE_BASE_URL=https://travellersneed-server.onrender.com/api
+VITE_BASE_URL=http://localhost:3000/api
 
 # JWT Secret
 VITE_JWT_SECRET=oehworreeorhewroew98123449324324kwnfwwbmtechx
@@ -69,7 +69,7 @@ VITE_UPDATE_QUOTE_STATUS=/quotes/update-quote-status
 VITE_DELETE_QUOTE=/quotes/delete-quote
 
 #Settings Management URLs (Relaltive paths for consistency)
-VITE_FETCH_USER_BY_ID=/users/get-user-by-id
+# VITE_FETCH_USER_BY_ID=/users/get-user-by-id
 VITE_UPDATE_USER_BY_ID=/users/update-user
 
 #Feedback Management URLs (Relaltive paths for consistency)
@@ -94,7 +94,7 @@ VITE_GET_IMAGE_FOR_ADDRESS=/address/get-image
 VITE_FETCH_ALL_BOOKING_FOR_BOOKING=/bookings/get-all-bookings-for-booking-page
 VITE_FETCH_ALL_BOOKING_BY_USERID=/bookings/get-all-booking-by-userId
 VITE_FETCH_ALL_TOUR_PLAN_FOR_SEARCH_BY_CITY=/tour-plans/get-all-tour-plans-for-search-by-city
-VITE_FETCH_ALL_ADDRESS_FOR_PLACES=/address/get-all-addresses-for-places
+# VITE_FETCH_ALL_ADDRESS_FOR_PLACES=/address/get-all-addresses-for-places
 VITE_CREATE_BOOKING=/bookings/create-booking
 VITE_UPDATE_BOOKING_STATUS=/bookings/update-booking
 
