--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/x-date-pickers": "^7.23.6",
+    "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
@@ -35,6 +36,7 @@
     "lightbox2": "^2.11.5",
     "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.7",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.6.0",
