--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.0.5",
     "gapi-script": "^1.2.0",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
@@ -41,6 +42,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.1.1",
     "react-simple-chatbot": "^0.6.1",
