--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,4 @@ MONGODB_URL=mongodb+srv://charlesbmtechx:bmtechx@Cluster0.bhw9c.mongodb.net/Tour
 JWT_SECRET=oehworreeorhewroew98123449324324kwnfwwbmtechx
 EMAIL_USER=charles.bmtechx@gmail.com
 EMAIL_PASSWORD=shibjhookhqqaazz
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://travellersneed-server.onrender.com
